# Robotics

./: .gitmodules
Frameworks/Openrdk/src/scripts/: CMakeLists.txt  rdk-cmake-ragent-module.sh  rdk-cmake-subdirs.sh  rdk-config.template  rdk-create-module-dir.sh  rdk-update-config.sh  rdk-upload-it.sh
Libraries/Vision/coldvision-library/: CMakeLists.txt  README.md
Libraries/Vision/coldvision-library/include/: cvl.hpp
MIDDLEWARE/simox/: CMakeLists.txt  readme.txt
MIDDLEWARE/simox/CMakeModules/: FindAStyle.cmake  FindEigen3.cmake  FindSubversion.cmake  Findurdfdom.cmake  SearchForTinyXML.cmake  SimoxBuildTreeSettings.cmake.in  SimoxConfig.cmake.in  SimoxConfigVersion.cmake.in  SimoxMacros.cmake
MIDDLEWARE/simox/GraspPlanning/: ApproachMovementSurfaceNormal.h  CMakeLists.txt  ContactConeGenerator.h  ConvexHullGenerator.cpp
MIDDLEWARE/simox/GraspPlanning/GraspPlanner/: GraspPlanner.h
MIDDLEWARE/simox/GraspPlanning/GraspQuality/: GraspQualityMeasure.cpp  GraspQualityMeasureWrenchSpace.h
MIDDLEWARE/simox/GraspPlanning/Visualization/: ConvexHullVisualization.cpp
MIDDLEWARE/simox/GraspPlanning/examples/: CMakeLists.txt
MIDDLEWARE/simox/MotionPlanning/: ApproachDiscretization.cpp  ApproachDiscretization.h
MIDDLEWARE/simox/MotionPlanning/CSpace/: CSpaceNode.h  CSpacePath.cpp  CSpaceSampled.h  CSpaceTree.h
MIDDLEWARE/simox/MotionPlanning/Planner/: BiRrt.cpp  GraspIkRrt.cpp  GraspIkRrt.h  GraspRrt.cpp  GraspRrt.h  MotionPlanner.cpp  MotionPlanner.h  PlanningThread.cpp  PlanningThread.h  Rrt.cpp
MIDDLEWARE/simox/MotionPlanning/PostProcessing/: PathProcessor.cpp  PathProcessor.h
MIDDLEWARE/simox/MotionPlanning/Visualization/: RrtWorkspaceVisualization.h
MIDDLEWARE/simox/MotionPlanning/examples/: CMakeLists.txt
MIDDLEWARE/simox/MotionPlanning/tests/: SabaCSpaceTest.cpp
MIDDLEWARE/simox/SimDynamics/: CMakeLists.txt  DynamicsWorld.h  SimDynamics.h
MIDDLEWARE/simox/SimDynamics/CMakeModules/: FindBullet.cmake
MIDDLEWARE/simox/SimDynamics/DynamicsEngine/: DynamicsEngineFactory.h  DynamicsRobot.cpp  DynamicsRobot.h  DynamicsUtils.cpp
MIDDLEWARE/simox/VirtualRobot/: BoundingBox.h  LinkedCoordinate.cpp  ManipulationObject.h  MathTools.cpp  Primitive.cpp  Primitive.h  RobotConfig.cpp  RobotConfig.h  RobotFactory.h  RobotNodeSet.h  RuntimeEnvironment.h  SceneObjectSet.h  Trajectory.h  Units.h  VirtualRobot.h  VirtualRobotCommon.h  VirtualRobotException.cpp  VirtualRobotException.h  VirtualRobotTest.h
MIDDLEWARE/simox/VirtualRobot/CollisionDetection/: CDManager.cpp  CollisionCheckerImplementation.h  CollisionModel.cpp
MIDDLEWARE/simox/VirtualRobot/Compression/: CompressionBZip2.h  CompressionRLE.h
MIDDLEWARE/simox/VirtualRobot/Dynamics/: dynamics.h
MIDDLEWARE/simox/VirtualRobot/EndEffector/: EndEffector.h  EndEffectorActor.h
MIDDLEWARE/simox/VirtualRobot/Grasping/: BasicGraspQualityMeasure.h  GraspSet.cpp
MIDDLEWARE/simox/VirtualRobot/IK/: CoMIK.cpp  CoMIK.h  ConstrainedHierarchicalIK.h  ConstrainedStackedIK.h  Constraint.h  FeetPosture.h  GenericIKSolver.h  JacobiProvider.cpp  JacobiProvider.h  JointLimitAvoidanceJacobi.cpp  JointLimitAvoidanceJacobi.h  PoseQualityManipulability.h  StackedIK.h  SupportPolygon.cpp  SupportPolygon.h
MIDDLEWARE/simox/VirtualRobot/Import/: RobotImporterFactory.h  SimoxCOLLADAFactory.cpp  SimoxCOLLADAFactory.h
MIDDLEWARE/simox/VirtualRobot/Nodes/: CameraSensor.cpp  CameraSensorFactory.h  ContactSensor.cpp  ContactSensorFactory.cpp  ContactSensorFactory.h  ForceTorqueSensor.cpp  ForceTorqueSensor.h  ForceTorqueSensorFactory.h  PositionSensor.h  PositionSensorFactory.h  RobotNode.cpp  RobotNode.h  RobotNode.txt  RobotNodeActuator.h  RobotNodeFactory.h  RobotNodeFixed.cpp  RobotNodeFixed.h  RobotNodeFixedFactory.cpp  RobotNodePrismatic.cpp  RobotNodePrismaticFactory.h  RobotNodeRevolute.cpp  RobotNodeRevoluteFactory.h  Sensor.cpp
MIDDLEWARE/simox/VirtualRobot/Transformation/: DHParameter.h
MIDDLEWARE/simox/VirtualRobot/Visualization/: ColorMap.h  Visualization.cpp  VisualizationNode.cpp  VisualizationNode.h
MIDDLEWARE/simox/VirtualRobot/Workspace/: Manipulability.cpp  VoxelTreeND.hpp  VoxelTreeNDElement.hpp  WorkspaceData.cpp  WorkspaceGrid.h  WorkspaceRepresentation.h
MIDDLEWARE/simox/VirtualRobot/XML/: FileIO.h  ObjectIO.h  RobotIO.cpp  RobotIO.h
MIDDLEWARE/simox/VirtualRobot/examples/: CMakeLists.txt
MIDDLEWARE/simox/VirtualRobot/tests/: VirtualRobotExceptionTest.cpp  VirtualRobotGazeIKTest.cpp  VirtualRobotIOTest.cpp  VirtualRobotJacobianTest.cpp  VirtualRobotLinkedCoordinateTest.cpp  VirtualRobotRobotTest.cpp  VirtualRobotSceneTest.cpp  VirtualRobotSensorTest.cpp  VirtualRobotThreadsafetyTest.cpp  VirtualRobotTrajectoryTest.cpp  VirtualRobotTransformationTest.cpp  VirtualRobotWorkSpaceTest.cpp
MIDDLEWARE/simox/debian/: changelog
MIDDLEWARE/simox/doc/: Doxyfile.in
MIDDLEWARE/simox/doc/file_format/: simox_robot.xsd
MIDDLEWARE/simox/doc/tutorial/: robot_howto2.xml  robot_howto3.xml  robot_howto4.xml  robot_howto5.xml  robot_howto8.xml
Simulators/simox/MotionPlanning/: CMakeLists.txt  Saba.h
Simulators/simox/MotionPlanning/CSpace/: CSpace.cpp  CSpace.h  CSpaceNode.cpp  CSpacePath.h  CSpaceSampled.cpp  CSpaceTree.cpp  ConfigurationConstraint.cpp  ConfigurationConstraint.h  Sampler.cpp  Sampler.h
Simulators/simox/MotionPlanning/Planner/: BiRrt.h  Rrt.h
Simulators/simox/MotionPlanning/PostProcessing/: PathProcessingThread.cpp  PathProcessingThread.h  ShortcutProcessor.cpp  ShortcutProcessor.h
Simulators/simox/MotionPlanning/Visualization/: RrtWorkspaceVisualization.cpp
Simulators/simox/VirtualRobot/: AbstractFactoryMethod.h  BoundingBox.cpp  CMakeLists.txt  KinematicChain.cpp  KinematicChain.h  LinkedCoordinate.h  ManipulationObject.cpp  MathTools.h  Obstacle.cpp  Obstacle.h  Robot.cpp  Robot.h  RobotFactory.cpp  RobotNodeSet.cpp  RuntimeEnvironment.cpp  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneObjectSet.cpp  SphereApproximator.cpp  SphereApproximator.h  Trajectory.cpp  VirtualRobotImportExport.h
Simulators/simox/doc/: CMakeLists.txt  external_project_setup.txt
(+2124 files in other folders)
